--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
          </div>
          <p class="h4"><b>Latest Updates</b></p>
          <ul>
-            <li><b>2020-02-27 Singapore SSH/SSL Server Updated..</b></li>
-            <li>2020-02-19 V2Ray Server Added..</li>
+            <li><b>2021-03-02 V2Ray Server Updated.</b></li>
+            <li>2020-02-19 SSH/SSL Server Added..</li>
             <li>2020-02-09 Two Indian Servers Added..</li>
             <li>2020-02-02 All Servers Tested & Fixed..</li>
-            <li>2020-01-22 New Temporary Servers Added & All Severs Tested.</li>
             <li>2020-12-28: New Two Australia (Melbourne) Servers Added.</li>
          </ul>
          <!-- Latest Update End -->
@@ -186,10 +185,10 @@
                   <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
                   <ul class="list-group">
                      <li class="list-group-item list-group-item-white"><i class="fa fa-map-marker"style="font-size:20px;"></i>   &nbsp; <b>Locations: &nbsp;&nbsp;Singapore</b></li>
-                     <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: &nbsp;&nbsp;www.mickysshfree.tk</b></li>
+                     <li class="list-group-item list-group-item-white"><i class="fa fas fa-server"style="font-size:20px;"></i>   &nbsp;<b>Host: &nbsp;&nbsp;www.mickysshv2ray.tk</b></li>
                      <li class="list-group-item list-group-item-white"><i class="fa fa-user"style="font-size:20px;"></i>   &nbsp;<b>Owner: &nbsp;&nbsp;MickySSH</b></li>
                      <li class="list-group-item list-group-item-white text-center"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>VMess Code</b></li>
-                     <li class="list-group-item list-group-item-white"><b>vmess://eyJhZGQiOiJ3d3cubWlja3lzc2hmcmVlLnRrIiwiYWlkIjoiMzIiLCJob3N0IjoiWW91ciBIb3N0IEhlcmUiLCJpZCI6ImE5MzRkNzhjLTliNGYtNDdkOC1iYjQwLWU2N2M3ZjkyMDU2ZCIsIm5ldCI6IndzIiwicGF0aCI6Ii80MzRiZi8iLCJwb3J0IjoiNDQzIiwicHMiOiJNaWNreVNTSCB8IFYyUmF5IiwidGxzIjoidGxzIiwidHlwZSI6Im5vbmUiLCJ2IjoiMiJ9</b></li>
+                     <li class="list-group-item list-group-item-white"><b>vmess://eyJhZGQiOiJ3d3cubWlja3lzc2h2MnJheS50ayIsImFpZCI6IjMyIiwiaG9zdCI6Ikhvc3QgSGVyZSIsImlkIjoiZjRiMDAwNjgtNDRjYi00NGMwLWI3MTgtYjM4MjkxMjAyMzNkIiwibmV0Ijoid3MiLCJwYXRoIjoiL2UxODJjNzZlLyIsInBvcnQiOiI0NDMiLCJwcyI6Ik1pY2t5U1NIIHwgVjJSYXkiLCJ0bHMiOiJ0bHMiLCJ0eXBlIjoibm9uZSIsInYiOiIyIn0=</b></li>
                      <li class="list-group-item list-group-item-white">
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter">
@@ -218,14 +217,14 @@
                            <h5 class="card-title"><b><i class="em em-flag-sg" aria-role="presentation" aria-label="Singapore Flag"></i>&nbsp;&nbsp;SG-VS01</b></h5>
                            <ul class="list-group">
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Protocol: VMess</b></li>
-                              <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickysshfree.tk</b></li>
+                              <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Host: www.mickysshv2ray.tk</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Server Port: 443</b></li>
-                              <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>UID: a934d78c-9b4f-47d8-bb40-e67c7f92056d</b></li>
+                              <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>UID: f4b00068-44cb-44c0-b718-b3829120233d</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>AlterID: 32</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Security: Auto</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Network Type: WebSocket</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Header: Your Host</b></li>
-                              <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /434bf/</b></li>
+                              <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>WebSocket Path: /e182c76e/</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS: Enable</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>TLS SNI: Your Host</b></li>
                               <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b>Allow Insecure: Enable</b></li>
@@ -255,7 +254,7 @@
                         <div class="card-body">
                            <h5 class="card-title"><b><i class="em em-newspaper" aria-role="presentation" aria-label="NEWSPAPER"></i>&nbsp;&nbsp;Important</b></h5>
                            <ul class="list-group">
-                           <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-03-02</b> V2Ray Server Under Maintenance</b></li>
+                           <li class="list-group-item list-group-item-white"><i class="fa fas fa-check-square"style="font-size:20px;"></i>   &nbsp;<b><b>2021-03-02</b> V2Ray Server Updated.</b></li>
                         </div>
                      </div>
                   </div>
