contact form added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   
-  <section class="menu cid-s48OLK6784" once="menu" id="menu1-h">
+  <section class="menu cid-sqGcwWcno6" once="menu" id="menu1-20">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
@@ -163,8 +163,8 @@
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
                                 <li class="list-group-item"><strong>IP: </strong>104.248.154.184
 </li><li class="list-group-item"><strong>SSH: </strong>22
-</li><li class="list-group-item"><strong>Dropbear: 80
-</strong></li><li class="list-group-item"><strong>SSL: </strong>443
+</li><li class="list-group-item"><strong>Dropbear: </strong>80
+</li><li class="list-group-item"><strong>SSL: </strong>443
 </li><li class="list-group-item"><strong>Squid: </strong>3128
 </li><li class="list-group-item"><strong>udpgw: </strong>7300</li>
                             </ul>
@@ -224,7 +224,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1r" data-rv-view="9">
+<section class="mbr-section" id="witsec-modal-window-block-1r" data-rv-view="11">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -285,7 +285,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1s" data-rv-view="10">
+<section class="mbr-section" id="witsec-modal-window-block-1s" data-rv-view="12">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -346,7 +346,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1t" data-rv-view="11">
+<section class="mbr-section" id="witsec-modal-window-block-1t" data-rv-view="13">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -407,7 +407,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1u" data-rv-view="12">
+<section class="mbr-section" id="witsec-modal-window-block-1u" data-rv-view="14">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -680,12 +680,12 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2020 MickySSH. All Rights Reserved.
+                    © Copyright 2020 <a href="index.html" class="text-primary">MickySSH</a>. All Rights Reserved.
                 </p>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s" style="color:#aaa;">Page</a> was created with Mobirise site templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/mbr-tabs/mbr-tabs.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website software - <a href="https://mobirise.site/n" style="color:#aaa;">Get now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/mbr-tabs/mbr-tabs.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
