Finished Basic Editing & Tested

--- a/about.html
+++ b/about.html
@@ -92,9 +92,7 @@
                     <div class="col-12 col-md">
                         <div class="card-box">
                             <h5 class="card-title mbr-fonts-style m-0 display-5"><strong>Lalantha Madhushan</strong></h5>
-                            <h6 class="mbr-fonts-style mb-3 display-4">
-                                <strong>Student</strong>
-                            </h6>
+                            <h6 class="mbr-fonts-style mb-3 display-4"><strong>Student | Founder of MickySSH</strong></h6>
                             <p class="mbr-text mbr-fonts-style display-7">
                                 B-Tech Student, Technophile, Linux Lover<br><br>Email: <a href="mailto:lalantham82@gmail.com" class="text-primary">lalantham82@gmail.com</a>&nbsp; | Website: <a href="http://lalantha.me" class="text-primary" target="_blank">lalantha.me</a><a href="http://lalantha.me" class="text-primary" target="_blank"><br></a><br>
                             </p>
@@ -178,7 +176,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">The <a href="https://mobirise.site/e" style="color:#aaa;">web page</a> was designed with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site <a href="https://mobirise.site/f" style="color:#aaa;">was created</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
