--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text mbr-fonts-style display-7"><strong>2020-03-08</strong> New US V2Ray Server Added<br><strong>2020-03-08</strong> New Username &amp; Password Added for All the Servers<br><strong>2020-03-05</strong> New Singapore SSH/SSL Server Added<br>
+                                <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2020-03-10</strong> New Singapore SSH/SSL Server Added<br>
+					<strong>2020-03-08</strong> New US V2Ray Server Added<br>
+					<strong>2020-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
                             </div>
                         </div>
@@ -170,7 +173,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP: </strong>165.232.163.16
+                                <li class="list-group-item"><strong>IP: </strong>165.232.172.51
 </li><li class="list-group-item"><strong>SSH: </strong>22
 </li><li class="list-group-item"><strong>Dropbear: </strong>80
 </li><li class="list-group-item"><strong>SSL: </strong>443
@@ -251,10 +254,10 @@
 	<div><div class="modal fade" id="SG-MODEL" tabindex="-1" role="dialog" aria-labelledby="SG-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="SG-MODELLabel">Singapore Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="SG-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;lalantha <br>
+      <strong>Username</strong>: &nbsp;&nbsp;afghte <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;lalantha
+      <strong>Password</strong>: &nbsp;&nbsp;afghte
   </h4><br>
 </div>
 <br>
