--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         gtag('config', 'G-7CKM7S5Y4L');
     </script>
   
-  <script type='text/javascript' src='//pl16149780.profitabletrustednetwork.com/54/df/8d/54df8d261aea8b5e4b666dee508420bb.js'></script>
+  <script type='text/javascript' src='//bewailindigestionunhappy.com/54/df/8d/54df8d261aea8b5e4b666dee508420bb.js'></script>
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,8 +28,6 @@
   <meta name=”robots” content=”index, follow”>
   <meta name="keywords" content="mickyssh, lalantha madhushan, mickybro, mickyvirus, http injector, ehi, free internet, ssh, ssl, dropbear, ssh premium server free, sri lanka, v2ray premium, v2ray servers, v2ray ssh, v2ray premium account, v2ray port 80">
   <meta name="author" content="Lalantha Madhushan">
-  
-  <script data-ad-client="ca-pub-9216223721245321" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   
   
   <title>Contact Us | MickySSH</title>
