--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2020-03-11</strong> New Singapore V2Ray Server Added<br>
 					<strong>2020-03-10</strong> New Singapore SSH/SSL Server Added<br>
-					<strong>2020-03-08</strong> New US V2Ray Server Added<br>
+					<strong>2020-03-08</strong> New United States V2Ray Server Added<br>
 					<strong>2020-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
                             </div>
@@ -597,7 +598,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item">vmess://eyJhZGQiOiJ3d3cubWlja3lzc2gubWUiLCJhaWQiOiIxIiwiaG9zdCI6IllvdXIgSG9zdCBIZXJlIiwiaWQiOiJlNTQzMmQyZi03YTQ3LTQyZmItYWQ3Zi0yZjI4ZGUyYzc1MzkiLCJuZXQiOiJ3cyIsInBhdGgiOiIvZjNhOTQyNDgwMjcyNDc5N3dzcyIsInBvcnQiOiI0NDMiLCJwcyI6Ik1pY2t5U1NIIHwgVjJyYXkgIiwidGxzIjoidGxzIiwidHlwZSI6IiIsInYiOiIyIn0=</li>
+                                <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJtaWNreXR3by50ayIsCiAgInBvcnQiOiA0NDMsCiAgImlkIjogIjExNWExYmU3LTc5YjgtNDE5Mi05NjQxLTEzYTI1M2U1YjQ3NSIsCiAgImFpZCI6IDY0LAogICJuZXQiOiAid3MiLAogICJ0eXBlIjogIm5vbmUiLAogICJob3N0IjogIiIsCiAgInBhdGgiOiAiLyIsCiAgInRscyI6ICJ0bHMiCn0=</li>
                             </ul>
                         </div>
                         
