--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2020-03-12</strong> New United States V2Ray Server Updated<br>
 					<strong>2020-03-11</strong> New Singapore V2Ray Server Added<br>
 					<strong>2020-03-10</strong> New Singapore SSH/SSL Server Added<br>
-					<strong>2020-03-08</strong> New United States V2Ray Server Added<br>
 					<strong>2020-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
                             </div>
@@ -619,7 +619,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJzc2htaWNreS5tZSIsCiAgInBvcnQiOiA0NDMsCiAgImlkIjogIjA1OGVlYTIzLTc0ZTUtNGVlZi1lY2I0LTYxOWJhNzAwYjYzNCIsCiAgImFpZCI6IDY0LAogICJuZXQiOiAid3MiLAogICJ0eXBlIjogIm5vbmUiLAogICJob3N0IjogIiIsCiAgInBhdGgiOiAiLyIsCiAgInRscyI6ICJ0bHMiCn0=</li>
+                                <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJtaWNreXNlcnYudGsiLAogICJwb3J0IjogNDQzLAogICJpZCI6ICJjMjAzZDk3NC1hMWVjLTQ0ZTAtZjU0MC1jZjkwYWI5OWZhYWYiLAogICJhaWQiOiA2NCwKICAibmV0IjogIndzIiwKICAidHlwZSI6ICJub25lIiwKICAiaG9zdCI6ICIiLAogICJwYXRoIjogIi8iLAogICJ0bHMiOiAidGxzIgp9</li>
                             </ul>
                         </div>
                         
