--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         gtag('config', 'G-7CKM7S5Y4L');
     </script>
 
+  <script type='text/javascript' src='//affableindigestionstruggling.com/54/df/8d/54df8d261aea8b5e4b666dee508420bb.js'></script>
   
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
