--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
       gtag('config', 'G-7CKM7S5Y4L');
   </script>
-	
-	<script type='text/javascript' src='//affableindigestionstruggling.com/54/df/8d/54df8d261aea8b5e4b666dee508420bb.js'></script>
 
 
   <meta charset="UTF-8">
@@ -130,9 +128,9 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2020-03-14</strong> New Singapore SSH/SSL Server Added<br>
 					<strong>2020-03-12</strong> New United States V2Ray Server Updated<br>
 					<strong>2020-03-11</strong> New Singapore V2Ray Server Added<br>
-					<strong>2020-03-10</strong> New Singapore SSH/SSL Server Added<br>
 					<strong>2020-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
                             </div>
@@ -173,7 +171,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP: </strong>165.232.172.51
+                                <li class="list-group-item"><strong>IP: </strong>45.76.190.105
 </li><li class="list-group-item"><strong>SSH: </strong>22
 </li><li class="list-group-item"><strong>Dropbear: </strong>80
 </li><li class="list-group-item"><strong>SSL: </strong>443
@@ -257,7 +255,7 @@
       <strong>Username</strong>: &nbsp;&nbsp;afghte <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;afghte
+      <strong>Password</strong>: &nbsp;&nbsp;af#123#
   </h4><br>
 </div>
 <br>
