--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-					<strong>2020-03-14</strong> New Singapore SSH/SSL Server Added<br>
 					<strong>2020-03-12</strong> New United States V2Ray Server Updated<br>
+					<strong>2020-03-14</strong> New Singapore SSH/SSL Server Added<br>
 					<strong>2020-03-11</strong> New Singapore V2Ray Server Added<br>
 					<strong>2020-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
@@ -605,6 +605,7 @@
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
                                 <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJtaWNreXR3by50ayIsCiAgInBvcnQiOiA0NDMsCiAgImlkIjogIjExNWExYmU3LTc5YjgtNDE5Mi05NjQxLTEzYTI1M2U1YjQ3NSIsCiAgImFpZCI6IDY0LAogICJuZXQiOiAid3MiLAogICJ0eXBlIjogIm5vbmUiLAogICJob3N0IjogIiIsCiAgInBhdGgiOiAiLyIsCiAgInRscyI6ICJ0bHMiCn0=</li>
+				<li class="list-group-item text-center" style="color: red;"><b>* Do not use for torrents.</b></li>
                             </ul>
                         </div>
                         
@@ -625,7 +626,8 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJtaWNreXNlcnYudGsiLAogICJwb3J0IjogNDQzLAogICJpZCI6ICJjMjAzZDk3NC1hMWVjLTQ0ZTAtZjU0MC1jZjkwYWI5OWZhYWYiLAogICJhaWQiOiA2NCwKICAibmV0IjogIndzIiwKICAidHlwZSI6ICJub25lIiwKICAiaG9zdCI6ICIiLAogICJwYXRoIjogIi8iLAogICJ0bHMiOiAidGxzIgp9</li>
+                                <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJtaWNreWZpdmUudGsiLAogICJwb3J0IjogNDQzLAogICJpZCI6ICIxNTBjZjBmOC1jYWZjLTQwODQtYmVjNC1mMDM1NmRjOWIxYWQiLAogICJhaWQiOiA2NCwKICAibmV0IjogIndzIiwKICAidHlwZSI6ICJub25lIiwKICAiaG9zdCI6ICIiLAogICJwYXRoIjogIi8iLAogICJ0bHMiOiAidGxzIgp9</li>
+				<li class="list-group-item text-center" style="color: red;"><b>* Do not use for torrents.</b></li>
                             </ul>
                         </div>
                         
