--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
                                 <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJtaWNreTdlbi50ayIsCiAgInBvcnQiOiA0NDMsCiAgImlkIjogIjY0ZmY0YjQxLTBlY2ItNDA4Zi1kMGIzLTRmNjllYmM0ODFjMyIsCiAgImFpZCI6IDY0LAogICJuZXQiOiAid3MiLAogICJ0eXBlIjogIm5vbmUiLAogICJob3N0IjogIiIsCiAgInBhdGgiOiAiL21pY2t5c3NoLyIsCiAgInRscyI6ICJ0bHMiCn0=</li>
-				<li class="list-group-item text-center" style="color: red;"><b>* Do not use for torrents. If so, whole server will be automatically suspended.</b></li>
+				<li class="list-group-item text-center" style="color: red;"><b>* Warning: Do not use for torrent, Spam or any kind of illegal activities. If so, whole server will be automatically suspended. I do not add new servers to the banned servers.if server banned, it's just gone forever</b></li>
                             </ul>
                         </div>
                         
@@ -627,7 +627,7 @@
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
                                 <li class="list-group-item">vmess://ewogICJ2IjogIjIiLAogICJwcyI6ICJNaWNreVNTSCIsCiAgImFkZCI6ICJtaWNreWZpdmUudGsiLAogICJwb3J0IjogNDQzLAogICJpZCI6ICIxNTBjZjBmOC1jYWZjLTQwODQtYmVjNC1mMDM1NmRjOWIxYWQiLAogICJhaWQiOiA2NCwKICAibmV0IjogIndzIiwKICAidHlwZSI6ICJub25lIiwKICAiaG9zdCI6ICIiLAogICJwYXRoIjogIi8iLAogICJ0bHMiOiAidGxzIgp9</li>
-				<li class="list-group-item text-center" style="color: red;"><b>* Do not use for torrents. If so, whole server will be automatically suspended.</b></li>
+				<li class="list-group-item text-center" style="color: red;"><b>* Warning: Do not use for torrent, Spam or any kind of illegal activities. If so, whole server will be automatically suspended. I do not add new servers to the banned servers.if server banned, it's just gone forever</b></li>
                             </ul>
                         </div>
                         
