--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
   </h4><br>
 </div>
 <br>
-<strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br></strong>
+<strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br></strong>
 <br>
 <h6 style="Text-align: center; color: red;">
       <strong>* Username &amp; Password Will be Change Once a Week
