--- a/index.html
+++ b/index.html
@@ -267,6 +267,9 @@
   </h4><br>
 </div>
 <br>
+<strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br></strong>
+<br>		
+
 <h6 style="Text-align: center; color: red;">
       <strong>* Username &amp; Password Will be Change Once a Week
   </strong></h6></div><div class="modal-footer"><div class="mbr-section-btn"><strong><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></strong></div></div><strong>    </strong></div><strong>  </strong></div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#SG-MODEL").on("hidden.bs.modal", function () {    var html = $( "#SG-MODEL_body" ).html();    $( "#SG-MODEL_body" ).empty();    $( "#SG-MODEL_body" ).append(html);  })});</script></div>
@@ -332,6 +335,8 @@
   </h4><br>
 </div>
 <br>
+<strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br></strong>
+<br>
 <h6 style="Text-align: center; color: red;">
       <strong>* Username &amp; Password Will be Change Once a Week
   </strong></h6></div><div class="modal-footer"><div class="mbr-section-btn"><strong><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></strong></div></div><strong>    </strong></div><strong>  </strong></div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#US-MODEL").on("hidden.bs.modal", function () {    var html = $( "#US-MODEL_body" ).html();    $( "#US-MODEL_body" ).empty();    $( "#US-MODEL_body" ).append(html);  })});</script></div>
@@ -396,6 +401,8 @@
       <strong>Password</strong>: &nbsp;&nbsp;fortion
   </h4><br>
 </div>
+<br>
+<strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br></strong>
 <br>
 <h6 style="Text-align: center; color: red;">
       <strong>* Username &amp; Password Will be Change Once a Week
