--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-					<strong>2021-03-17</strong> New Singapore SSH/SSL Server Added<br>
+					<strong>2021-03-18</strong> New Singapore SSH/SSL Server Added<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
 					<strong>2021-03-17</strong> New Singapore V2Ray Server Added<br>
 					<strong>2021-03-16</strong> New United States V2Ray Server Updated<br>
@@ -179,7 +179,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP: </strong>45.32.115.95
+                                <li class="list-group-item"><strong>IP: </strong>45.32.99.128
 </li><li class="list-group-item"><strong>SSH: </strong>22
 </li><li class="list-group-item"><strong>Dropbear: </strong>80
 </li><li class="list-group-item"><strong>SSL: </strong>443
@@ -260,10 +260,10 @@
 	<div><div class="modal fade" id="SG-MODEL" tabindex="-1" role="dialog" aria-labelledby="SG-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="SG-MODELLabel">Singapore Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="SG-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;hialite <br>
+      <strong>Username</strong>: &nbsp;&nbsp;huzlip <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;t7eU2h
+      <strong>Password</strong>: &nbsp;&nbsp;huzlip
   </h4><br>
 </div>
 <br>
