--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2021-03-18</strong> New Indian V2Ray Server Added<br>
 					<strong>2021-03-18</strong> New Singapore SSH/SSL Server Added<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
 					<strong>2021-03-17</strong> New Singapore V2Ray Server Added<br>
-					<strong>2021-03-16</strong> New United States V2Ray Server Updated<br>
 					<strong>2021-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
                             </div>
