--- a/index.html
+++ b/index.html
@@ -196,6 +196,30 @@
                     <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-4"><strong>SSH/SSL&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></h6>
                         <div class="plan-price">
+                            <p class="price mbr-fonts-style m-0 display-5"><strong>Singapore</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-7"></p>
+                        </div>
+                    </div>
+                    <div class="plan-body">
+                        <div class="plan-list mb-4">
+                            <ul class="list-group mbr-fonts-style list-group-flush display-7">
+                                <li class="list-group-item"><strong>IP: </strong>45.32.99.128
+</li><li class="list-group-item"><strong>SSH: </strong>22
+</li><li class="list-group-item"><strong>Dropbear: </strong>80
+</li><li class="list-group-item"><strong>SSL: </strong>443
+</li><li class="list-group-item"><strong>Squid: </strong>3128
+</li><li class="list-group-item"><strong>udpgw: </strong>7300</li>
+                            </ul>
+                        </div>
+                        <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('SG-MODEL')" class="btn btn-primary display-4">Get started</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 align-center col-lg-4">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h6 class="plan-title mbr-fonts-style mb-3 display-4"><strong>SSH/SSL&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></h6>
+                        <div class="plan-price">
                             <p class="price mbr-fonts-style m-0 display-5"><strong>United States</strong></p>
                             <p class="price-term mbr-fonts-style mb-3 display-7"></p>
                         </div>
@@ -211,29 +235,6 @@
                             </ul>
                         </div>
                         <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('US-MODEL')" class="btn btn-primary display-4">Get started</a></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 align-center col-lg-4">
-                <div class="plan">
-                    <div class="plan-header">
-                        <h6 class="plan-title mbr-fonts-style mb-3 display-4"><strong>SSH/SSL&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></h6>
-                        <div class="plan-price">
-                            <p class="price mbr-fonts-style m-0 display-5"><strong>Australia</strong></p>
-                            <p class="price-term mbr-fonts-style mb-3 display-7"></p>
-                        </div>
-                    </div>
-                    <div class="plan-body">
-                        <div class="plan-list mb-4">
-                            <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 168.138.10.35</li><li class="list-group-item"><strong>SSH</strong>: 22
-</li><li class="list-group-item"><strong>Dropbear</strong>: 80
-</li><li class="list-group-item"><strong>SSL</strong>: 443
-</li><li class="list-group-item"><strong>Squid</strong>: 3128
-</li><li class="list-group-item"><strong>udpgw</strong>: 7300</li>
-                            </ul>
-                        </div>
-                        <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('AZ-MODEL')" class="btn btn-primary display-4">Get started</a></div>
                     </div>
                 </div>
             </div>
@@ -509,6 +510,29 @@
     
     <div class="container">
         <div class="row justify-content-center">
+        	<div class="col-12 col-md-6 align-center col-lg-4">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h6 class="plan-title mbr-fonts-style mb-3 display-4"><strong>SSH/SSL&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></h6>
+                        <div class="plan-price">
+                            <p class="price mbr-fonts-style m-0 display-5"><strong>Australia</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-7"></p>
+                        </div>
+                    </div>
+                    <div class="plan-body">
+                        <div class="plan-list mb-4">
+                            <ul class="list-group mbr-fonts-style list-group-flush display-7">
+                                <li class="list-group-item"><strong>IP</strong>: 168.138.10.35</li><li class="list-group-item"><strong>SSH</strong>: 22
+</li><li class="list-group-item"><strong>Dropbear</strong>: 80
+</li><li class="list-group-item"><strong>SSL</strong>: 443
+</li><li class="list-group-item"><strong>Squid</strong>: 3128
+</li><li class="list-group-item"><strong>udpgw</strong>: 7300</li>
+                            </ul>
+                        </div>
+                        <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('AZ-MODEL')" class="btn btn-primary display-4">Get started</a></div>
+                    </div>
+                </div>
+            </div>
             <div class="col-12 col-md-6 align-center col-lg-4">
                 <div class="plan">
                     <div class="plan-header">
