--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 45.32.99.128</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 139.180.191.134</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
@@ -274,7 +274,7 @@
       <strong>Username</strong>: &nbsp;&nbsp;huzlip <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;huzlip
+      <strong>Password</strong>: &nbsp;&nbsp;nT0-ZV
   </h4><br>
 </div>
 <br>		
