--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2021-03-30</strong> New United State V2Ray Server Added<br>
 					<strong>2021-03-27</strong> New Singapore V2Ray Server Added<br>
 					<strong>2021-03-27</strong> New Singapore SSH/SSL Server Added<br>
-					<strong>2021-03-24</strong> New Indian V2Ray Server Added<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
 					<strong>2021-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
