--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2021-04-06</strong> New Singapore SSH/SSL Server Added<br>
 					<strong>2021-04-06</strong> New Singapore V2Ray Server Added<br>
 					<strong>2021-04-06</strong> United State | India | Australia V2Ray Server Updated<br>
-					<strong>2021-04-06</strong> New New United State SSH/SSL Server Added<br>
+					<strong>2021-04-06</strong> New United State SSH/SSL Server Added<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
 					<strong>2021-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
@@ -188,7 +189,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 139.180.191.134</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 207.148.68.134</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
