--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
 					<strong>2021-04-17</strong> New Singapore SSH/SSL Server Added<br>
+					<strong>2021-04-17</strong> Australia SSH/SSL Server Fixed.<br>
 					<strong>2021-04-14</strong> New Singapore V2Ray Server Added<br>
 					<strong>2021-04-09</strong> New United State V2Ray Server Added<br>
-					<strong>2021-04-06</strong> New United State SSH/SSL Server Added<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
 					<strong>2021-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
