--- a/index.html
+++ b/index.html
@@ -139,10 +139,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-					<strong>2021-04-17</strong> New Singapore SSH/SSL Server Added<br>
-					<strong>2021-04-17</strong> Australia SSH/SSL Server Fixed.<br>
-					<strong>2021-04-14</strong> New Singapore V2Ray Server Added<br>
-					<strong>2021-04-09</strong> New United State V2Ray Server Added<br>
+					<strong>2021-04-18</strong> All SSH/SSL Servers Username & Password Updated<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
 					<strong>2021-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
@@ -272,10 +269,10 @@
 	<div><div class="modal fade" id="SG-MODEL" tabindex="-1" role="dialog" aria-labelledby="SG-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="SG-MODELLabel">Singapore Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="SG-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;huzlip <br>
+      <strong>Username</strong>: &nbsp;&nbsp;vitions <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;nT0-ZV
+      <strong>Password</strong>: &nbsp;&nbsp;?Sk2c]
   </h4><br>
 </div>
 <br>		
@@ -338,10 +335,10 @@
 	<div><div class="modal fade" id="US-MODEL" tabindex="-1" role="dialog" aria-labelledby="US-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="US-MODELLabel">United States Sever</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="US-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;ahalty<br>
+      <strong>Username</strong>: &nbsp;&nbsp;scractor<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;ahalty
+      <strong>Password</strong>: &nbsp;&nbsp;scractor
   </h4><br>
 </div>
 <br>
@@ -403,10 +400,10 @@
 	<div><div class="modal fade" id="AZ-MODEL" tabindex="-1" role="dialog" aria-labelledby="AZ-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="AZ-MODELLabel">Australia Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="AZ-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;fortion<br>
+      <strong>Username</strong>: &nbsp;&nbsp;groudby<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;fortion
+      <strong>Password</strong>: &nbsp;&nbsp;groudby
   </h4><br>
 </div>
 <br>
@@ -468,10 +465,10 @@
 	<div><div class="modal fade" id="IN-MODEL" tabindex="-1" role="dialog" aria-labelledby="IN-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="IN-MODELLabel">Indian Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="IN-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;denonia<br>
+      <strong>Username</strong>: &nbsp;&nbsp;fluitying<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;denonia
+      <strong>Password</strong>: &nbsp;&nbsp;fluitying
   </h4><br>
 </div>
 <br>
