--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
+					<strong>2021-04-24</strong> New Singapore SSH/SSL Server Added.<br>
 					<strong>2021-04-23</strong> New Singapore V2Ray Server Added.<br>
 					<strong>2021-04-18</strong> New United State V2Ray Server Added.<br>
 					<strong>2021-04-18</strong> All SSH/SSL Servers Username & Password Updated<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
-					<strong>2021-03-08</strong> New Username &amp; Password Added for All the Servers<br>
                                 </p>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 139.180.189.243</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 45.76.183.139</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
