--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-					<strong>2021-04-24</strong> New Singapore SSH/SSL Server Added.<br>
+					<strong>2021-04-24</strong> Two New Singapore SSH/SSL Server Added.<br>
 					<strong>2021-04-23</strong> New Singapore V2Ray Server Added.<br>
 					<strong>2021-04-18</strong> New United State V2Ray Server Added.<br>
 					<strong>2021-04-18</strong> All SSH/SSL Servers Username & Password Updated<br>
@@ -211,7 +211,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 206.189.156.42</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 174.138.19.117</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
