--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 45.32.119.201</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 167.99.78.201</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
@@ -212,7 +212,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 139.59.122.15</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 128.199.196.121</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
@@ -272,10 +272,10 @@
 	<div><div class="modal fade" id="SG-MODEL" tabindex="-1" role="dialog" aria-labelledby="SG-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="SG-MODELLabel">Singapore Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="SG-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;vitions <br>
+      <strong>Username</strong>: &nbsp;&nbsp;itather <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;?Sk2c]
+      <strong>Password</strong>: &nbsp;&nbsp;itather
   </h4><br>
 </div>
 <br>		
