--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 157.230.188.208</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 159.65.168.174</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
@@ -338,10 +338,10 @@
 	<div><div class="modal fade" id="US-MODEL" tabindex="-1" role="dialog" aria-labelledby="US-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="US-MODELLabel">United States Sever</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="US-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;scractor<br>
+      <strong>Username</strong>: &nbsp;&nbsp;chifully<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;scractor
+      <strong>Password</strong>: &nbsp;&nbsp;chifully
   </h4><br>
 </div>
 <br>
