--- a/index.html
+++ b/index.html
@@ -403,10 +403,10 @@
 	<div><div class="modal fade" id="AZ-MODEL" tabindex="-1" role="dialog" aria-labelledby="AZ-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="AZ-MODELLabel">Australia Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="AZ-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;groudby<br>
+      <strong>Username</strong>: &nbsp;&nbsp;beseled<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;groudby
+      <strong>Password</strong>: &nbsp;&nbsp;beseled
   </h4><br>
 </div>
 <br>
@@ -468,10 +468,10 @@
 	<div><div class="modal fade" id="IN-MODEL" tabindex="-1" role="dialog" aria-labelledby="IN-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="IN-MODELLabel">Indian Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="IN-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;fluitying<br>
+      <strong>Username</strong>: &nbsp;&nbsp;chinte<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;fluitying
+      <strong>Password</strong>: &nbsp;&nbsp;chinte
   </h4><br>
 </div>
 <br>
