--- a/index.html
+++ b/index.html
@@ -139,11 +139,9 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-					<strong>2021-04-28</strong> New Singapore SSH/SSL Server Added.<br>
+					<strong>2021-05-01</strong> All SSH/SSL Server Updated.<br>
 					<strong>2021-04-28</strong> New Singapore V2Ray Server Added.<br>
-					<strong>2021-04-26</strong> New United State SSH/SSL Server Added.<br>
 					<strong>2021-04-26</strong> New United State V2Ray Server Added.<br>
-					<strong>2021-04-18</strong> All SSH/SSL Servers Username & Password Updated<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
                                 </p>
                             </div>
