--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html">
                             Contact Us</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#pricing2-m">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="index.html">
                         GET SSH ACCOUNT</a></div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>MickySSH</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">Make Your Connection More Secure and Unblock All Sites With Free Premium SSH and V2Ray Account.</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#pricing2-m">GET SSH ACCOUNT</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="#pricing2-m">GET SSH ACCOUNT</a></div>
             </div>
         </div>
     </div>
