--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="contact.html">
                             Contact Us</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#pricing2-m">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="index.html">
                         GET SSH ACCOUNT</a></div>
             </div>
         </div>
