--- a/index.html
+++ b/index.html
@@ -502,6 +502,71 @@
 
 </section>
 
+<section class="mbr-section" id="witsec-modal-window-block-1u" data-rv-view="14">
+
+  <style>
+  /* Let's not animate the contents of modal windows */
+  .no-anim {
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
+  }
+  </style>
+
+  
+  
+  <div><div class="modal fade" id="CA-MODEL" tabindex="-1" role="dialog" aria-labelledby="CA-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="CA-MODELLabel">Indian Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="CA-MODEL_body"><div style="text-align: center">
+ <br>
+    <h4>
+      <strong>Username</strong>: &nbsp;&nbsp;nastally<br>
+  </h4>
+  <h4>
+      <strong>Password</strong>: &nbsp;&nbsp;nastally
+  </h4><br>
+</div>
+<br>
+<h6 style="Text-align: center; color: red;">
+      <strong>* Username &amp; Password Will be Change Once a Week
+  </strong></h6></div><div class="modal-footer"><div class="mbr-section-btn"><strong><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></strong></div></div><strong>    </strong></div><strong>  </strong></div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#CA-MODEL").on("hidden.bs.modal", function () {    var html = $( "#CA-MODEL_body" ).html();    $( "#CA-MODEL_body" ).empty();    $( "#CA-MODEL_body" ).append(html);  })});</script></div>
+
+  <script>
+  if (typeof OpenModal === 'undefined') {
+    OpenModal = function(modalName) {
+      if ($('#' + modalName).length)
+        $('#' + modalName).modal('show');
+      else
+        alert("Sorry, but there is no modal for " + modalName);
+    }
+  }
+
+  function modalSetCookie(cname, cvalue, exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + (exdays*24*60*60*1000));
+    var expires = "expires="+ d.toUTCString();
+    document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+  }
+
+  function modalGetCookie(cname) {
+    var name = cname + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var ca = decodedCookie.split(';');
+    for(var i = 0; i <ca.length; i++) {
+      var c = ca[i];
+      while (c.charAt(0) == ' ') {
+        c = c.substring(1);
+      }
+      if (c.indexOf(name) == 0) {
+        return c.substring(name.length, c.length);
+      }
+    }
+    return "";
+  }
+  </script>
+
+</section>
+
 <section class="pricing2 cid-sqCqRfqfCy" id="pricing2-n">
     
     <div class="container">
@@ -551,6 +616,31 @@
                             </ul>
                         </div>
                         <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('IN-MODEL')" class="btn btn-primary display-4">Get started</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 align-center col-lg-4">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h6 class="plan-title mbr-fonts-style mb-3 display-4">
+                            <strong>SSH/SSL</strong>
+                        </h6>
+                        <div class="plan-price">
+                            <p class="price mbr-fonts-style m-0 display-5"><strong>Canada</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-4"></p>
+                        </div>
+                    </div>
+                    <div class="plan-body">
+                        <div class="plan-list mb-4">
+                            <ul class="list-group mbr-fonts-style list-group-flush display-7">
+                                <li class="list-group-item"><strong>IP</strong>: 132.145.111.1</li><li class="list-group-item"><strong>SSH</strong>: 22
+</li><li class="list-group-item"><strong>Dropbear</strong>: 80
+</li><li class="list-group-item"><strong>SSL</strong>: 443
+</li><li class="list-group-item"><strong>Squid</strong>: 3128
+</li><li class="list-group-item"><strong>udpgw</strong>: 7300</li>
+                            </ul>
+                        </div>
+                        <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('CA-MODEL')" class="btn btn-primary display-4">Get started</a></div>
                     </div>
                 </div>
             </div>
