--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-					<strong>2021-05-14</strong> New Singapore V2Ray Server Added.<br>
+					<strong>2021-05-14</strong> New Canada SSH/SSL & V2Ray Server Added.<br>
+          <strong>2021-05-14</strong> New Singapore V2Ray Server Added.<br>
 					<strong>2021-05-01</strong> All SSH/SSL Server Updated.<br>
 					<strong>2021-04-28</strong> New Singapore V2Ray Server Added.<br>
 					<strong>2021-04-26</strong> New United State V2Ray Server Added.<br>
